tests/semantic_errors/files/proj_7_struct_redefinition.c
struct Point {
    int x;
    int y;
};

struct Point {
    int z;
};

int main() {
    struct Point p;
    p.z = 5;
    return 0;
}
